<resources>
    <string name="app_name">PrivateAssistant</string>
    <string name="task">Task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">UserName</string>

    <string name="action_settings">Settings</string>

    <!--<string name="app_name">SuccinctNotes</string> -->
    <string name="app_desc">Succinct Notes, Simple Notepad Application</string>
    <string name="setting">Setting</string>
    <string name="bind_ever_note">Bind EverNote</string>
    <string name="unbind_ever_note">Unbind EverNote</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="normal_setting">Normal Settings</string>
    <string name="other">Other Setting</string>
    <string name="advice_feedback">Advice Feedback</string>
    <string name="give_favor">Give favor</string>
    <string name="sync">Sync</string>
    <array name="drawer_content">
        <item>Notes</item>
        <item>Trash</item>
    </array>
    <string name="note_log_text" formatted="false">%s\u0020:\u0020%s</string>
    <string name="edit">Edit</string>
    <string name="trash">Trash</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="unlock">UnLock</string>

    <string name="enter_password_hint">Please input password</string>
    <string name="enter_password_again_hint">Please input password again</string>
    <string name="forget_password">Forget password??Click here.</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_tip">Are you want to delete this note from local</string>
    <string name="tip">Tip</string>
    <string name="careful">Be Careful!!!</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="label">Label</string>
    <string name="note_content">content</string>
    <string name="new_note">New Note</string>
    <string name="search_note">Search</string>
    <string name="edit_note">Edit Note</string>
    <string name="view_note">View Note</string>
    <string name="show_note_history_log_key">show_note_history_log_key</string>

    <string name="start_vibrate">Start Vibrate</string>
    <string name="start_vibrate_key">start_vibrate_key</string>
    <string name="start_vibrate_summary">If this is on, the phone will vibrate when the alarm is open</string>

    <string name="adjust_volume">Adjust Volume</string>
    <string name="adjust_volume_key">adjust_volume_key</string>

    <string name="lock_phone_vibrate">Start Vibrate</string>
    <string name="lock_phone_vibrate_key">lock_phone_vibrate_key</string>
    <string name="lock_phone_vibrate_summary">If this is on, the phone will vibrate when you open the screen in the phone is locked</string>


    <string name="move_success">Remove Success</string>
    <string name="recover">Recover</string>
    <string name="create">Create</string>
    <string name="advice_feedback_key">advice_feedback_key</string>
    <string name="sync_account_key">sync_account_key</string>
    <string name="sync_success">Sync success</string>
    <string name="sync_fail">Sync fail</string>
    <string name="pay_for_me_title">Pay For Me</string>

    <string name="pay_for_me_tip">If you think the SuccinctNotes useful to you, please feel free to reward.</string>
    <string name="pay_for_me">Pay</string>
    <string name="pay_for_me_key">pay_for_me_key</string>
    <string name="recycle_bin">Trash</string>
    <string name="give_favor_key">give_favor_key</string>
    <string name="card_note_item_layout">Card View Notes</string>
    <string name="card_note_item_layout_key">card_note_item_layout_key</string>
    <string name="not_save_note_leave_tip">Note have changed, are you want to leave this page without saving the notes</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_key">change_theme_key</string>

    <string name="set_password_summary">Set your private note`s password</string>
    <string name="set_password">Set Password</string>
    <string name="set_password_key">set_password_key</string>

    <string name="before_hour" formatted="false">%d\u0020 hours ago</string>
    <string name="before_day" formatted="false">%d\u0020 days ago</string>
    <string name="before_month" formatted="false">%d\u0020 months ago</string>
    <string name="before_year" formatted="false">%d\u0020 years ago</string>
    <string name="share_text" formatted="false">Succinct notes, simple and easy to use, recommend you to use %s\u0020%s</string>
    <string name="download_url">Download url</string>
    <string name="not_install_app">Install corresponding app first</string>
    <array name="share_dialog_text">
        <item>Wechat Friends</item>
        <item>Wechat Moments</item>
        <item>Wechat Favorite</item>
        <item>Sina Weibo</item>
        <item>More</item>
    </array>
    <string name="about_bottom_text">Copyright © 2015 Liaoguipeng.\nAll Rights Reserved.</string>
    <string name="bind_ever_note_fail">Bind EverNote fail</string>
    <string name="bind_ever_note_success">Bind EverNote success</string>
    <string name="ever_note_account">EverNote Account</string>
    <string name="ever_note_account_key">ever_note_account_key</string>
    <string name="has_unbind_ever_note_tip">Are you sure to unbind EverNote</string>
    <string name="expunge_error">Expunge Delete Error</string>
    <string name="unbind_ever_note_tip">Go to settings and bind EverNote</string>
    <string name="go_bind">Bind</string>
    <string name="delete_error">Delete error</string>
    <string name="recovering">Recovering</string>
    <string name="frequent_api_tip">Try again later</string>
    <string name="view">View</string>
    <string name="last_update">Last update</string>
    <string name="error_auth_expired_tip">Auth error，please auth again</string>
    <string name="error_permission_deny">Permission Deny</string>
    <string name="error_quota_reached">Quota reached error</string>

    <string name="password_title">Verify Password</string>
    <string name="find_password_title">Find Password</string>

    <string name="title">title</string>

    <string name="set_password_title">Set Password</string>
    <string name="reset_password_title">Reset Password</string>

    <string name="volume_dialog_title">Adjust Alarm Volume</string>
    <string name="backup_local_key">backup_local_key</string>
    <string name="backup_local_summary">Backup notes to SDCard /SNote/notes.txt</string>
    <string name="backup_local">Backup Local</string>
    <string name="backup_local_done">Backup done</string>
    <string name="just_now">just now</string>
    <string name="before_half_hour">a half of hour ago</string>

    <string name="notification_title">Unlock Phone</string>
    <string name="notification_ticker">Unlock</string>
    <string name="notification_content">The Phone has unlocked</string>


    <string name="new_alarm">New Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="set_alarm_ring">Set Ring</string>
    <string name="set_alarm_my_ring">Set My Ring</string>
    <string name="set_alarm_tag">Set Tag</string>
    <string name="lazy_level_title">Choose your lazy level</string>
    <string name="not_save_alarm_leave_tip">Are you want to leave this page without saving the notes</string>

    <string name="wake_alarm_tip">Come On, give me the answer</string>
    <string name="wake_alarm_question">198 X 208 = ???</string>
    <string name="please_input_your_answer">please input your answer</string>

    <string name="show_question_1" formatted="false">%1$d\u0020+\u0020%2$d\u0020+\u0020%3$d\u0020=\u0020???</string>
    <string name="show_question_2" formatted="false">%1$d\u0020*\u0020%2$d\u0020+\u0020%3$d\u0020=\u0020???</string>
    <string name="show_question_3" formatted="false">%1$d\u0020*\u0020%2$d\u0020+\u0020%3$d\u0020=\u0020???</string>
    <string name="show_question_4" formatted="false">%1$d\u0020*\u0020%2$d\u0020*\u0020%3$d\u0020=\u0020???</string>

    <string name="private_note_title">Private Note</string>
    <string name="no_times">There is no time item, click add button to add an item.</string>
    <string name="no_notes">There is no note item, click add button to add an item.</string>
    <string name="no_alarms">There is no alarm item, click add button to add an item.</string>
    <string name="activate_device">Activate The Device! </string>

    <string name="display_seted_time_1" formatted="false">%s\u0020Hour\u0020%s\u0020Minute</string>
    <string name="display_seted_time_2" formatted="false">%s\u0020Minute</string>
    <string name="display_seted_time_3" formatted="false">%s\u0020Hour</string>

</resources>
