<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/normal_setting">
        <com.jenzz.materialpreference.CheckBoxPreference
            android:key="@string/card_note_item_layout_key"
            android:title="@string/card_note_item_layout" />

        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/start_vibrate_key"
            android:summary="@string/start_vibrate_summary"
            android:title="@string/start_vibrate" />

        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/lock_phone_vibrate_key"
            android:summary="@string/lock_phone_vibrate_summary"
            android:title="@string/lock_phone_vibrate" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/adjust_volume_key"
            android:title="@string/adjust_volume" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/change_theme_key"
            android:title="@string/change_theme" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/set_password_key"
            android:summary="@string/set_password_summary"
            android:title="@string/set_password" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/backup_local_key"
            android:summary="@string/backup_local_summary"
            android:title="@string/backup_local" />
    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/other">
        <com.jenzz.materialpreference.Preference
            android:key="@string/advice_feedback_key"
            android:summary="@string/advice_feedback_summary"
            android:title="@string/advice_feedback" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/pay_for_me_key"
            android:title="@string/pay_for_me_title" />
    </com.jenzz.materialpreference.PreferenceCategory>

</PreferenceScreen>