<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assistant.ui.activity.WakeUpActivity">

    <TextView
        android:id="@+id/tv_display_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="12 : 30"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_display_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_display_time"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="闹钟"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_display_tag"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/display_lazy_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wake_alarm_tip"
                android:textColor="@color/accent_brown"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/wake_alarm_question"
                android:textColor="@color/accent_brown"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/please_input_your_answer"
                    android:inputType="number"
                    android:textColor="@color/blue_grey"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="4"
                    android:background="@drawable/button_select"
                    android:gravity="center"
                    android:text="@string/sure"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
